# pkgsrc-rs

./: .gitignore  .travis.yml  ANALYSIS_AND_IMPROVEMENTS.md  Cargo.toml  MISSING_APIS.md  PKG_ADD_EXAMPLE.md  README.md  SUMMARY_MIGRATION_GUIDE.md  SUMMARY_REDESIGN.md  SUMMARY_V2_OVERVIEW.md
examples/: compare-distinfo.rs  pkg_add.rs  pkg_info.rs  pkgdb-byfile-rebuild.rs  summary_demo.rs  summary_v2_demo.rs  test-pkgmatch.c  test-pkgmatch.rs
kv/: Cargo.toml
kv-derive/: Cargo.toml
kv-derive/src/: lib.rs
kv/src/: lib.rs
src/: archive.rs  depend.rs  dewey.rs  digest.rs  distinfo.rs  kv.rs  lib.rs  metadata.rs  pattern.rs  pkgdb.rs  pkgmatch.rs  pkgname.rs  pkgpath.rs  plist.rs  pmatch.rs  scanindex.rs  summary.rs  summary_v2.rs
tests/: digest.rs  distinfo.rs  resolve.rs  summary.rs  summary_v2.rs
tests/data/: digest.txt  distinfo  distinfo.bad  distinfo.subdir  patch-Makefile  pkgdeps.txt  pkgnames.txt
tests/data/scanindex/: pbulk-index.txt  pscan.zstd  report.zst
tests/data/summary/: mktool.txt
