[package]
name = "pkgsrc"
description = "Library for interacting with a pkgsrc installation"
version = "0.1.31"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
readme = "README.md"
keywords = ["pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/pkgsrc-rs"
homepage = "https://github.com/jperkin/pkgsrc-rs"
documentation = "https://docs.rs/pkgsrc"
edition = "2021"

[dependencies]
ar = "0.9.0"
blake2 = "0.10.6"
digest = "0.10.7"
flate2 = "1.0.33"
glob = "0.3.1"
indexmap = "2.5.0"
md-5 = "0.10.6"
ripemd = "0.1.3"
serde = { version = "1.0.210", optional = true, features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
tar = "0.4.41"
thiserror = "1.0.63"

[dev-dependencies]
regex = "1.10.6"
structopt = "0.3.26"
unindent = "0.2.3"

[features]
serde = ["dep:serde"]
