[workspace]
members = [".", "kv-derive"]

[package]
name = "pkgsrc"
description = "Rust interface to pkgsrc packages and infrastructure"
version = "0.8.0"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
readme = "README.md"
keywords = ["pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/pkgsrc-rs"
homepage = "https://github.com/jperkin/pkgsrc-rs"
documentation = "https://docs.rs/pkgsrc"
rust-version = "1.85.1"
edition = "2024"

[dependencies]
pkgsrc-kv-derive = { path = "kv-derive", version = "0.2.0" }
ar = "0.9.0"
blake2 = "0.10.6"
digest = "0.10.7"
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
glob = "0.3.3"
indexmap = { version = "2.11.0", features = ["serde"] }
md-5 = "0.10.6"
ripemd = "0.1.3"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_with = { version = "3.14.0", optional = true }
sha1 = "0.10.6"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.16"
zstd = "0.13"

[dev-dependencies]
anyhow = "1.0"
indoc = "2"
rayon = "1.10"
regex = "1.11.2"
serde_json = "1.0"
structopt = "0.3.26"

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
