[package]
name = "pkgsrc-kv-derive"
version = "0.4.0"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
license = "ISC"
repository = "https://github.com/jperkin/pkgsrc-rs"
description = "Derive macro for KEY=VALUE parsing"
edition = "2024"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "parsing", "proc-macro"] }
