[package]
name = "pkgsrc-kv"
version = "0.2.0"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
license = "ISC"
repository = "https://github.com/jperkin/pkgsrc-rs"
description = "Type-safe KEY=VALUE parsing with a derive macro"
edition = "2024"
rust-version = "1.88"

[dependencies]
pkgsrc-kv-derive = { path = "../kv-derive", version = "0.5.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.16"

[features]
default = ["derive"]
derive = ["dep:pkgsrc-kv-derive"]
serde = ["dep:serde"]
